@@ -5,15 +5,13 @@ $_MODULE = array();
 $_MODULE['<{packetery}prestashop>packetery.api_5552dc553d496d4b06866ca45b890b4a'] = 'Vyberte prosím nejdříve objednávky.';
 $_MODULE['<{packetery}prestashop>packetery.api_40580ead2944ee1f216ef9be35c18eb4'] = 'Nepodařilo se nalézt směnný kurz mezi objednávkou a výdejním místem, objednávka';
 $_MODULE['<{packetery}prestashop>packetery.api_3593dc2dea08cf4567f70933c079f6a9'] = 'Zákazník nemá přiřazený email.';
-$_MODULE['<{packetery}prestashop>packetery.api_bfa381d3c91d890e0d80558816f4c7e8'] = 'Chyba sítě. Stažení seznamu výdejních míst se nezdařilo.';
+$_MODULE['<{packetery}prestashop>packetery.api_e44acb63fc22a1c3f0c4f2aa511e8bb1'] = 'Nelze stáhnout seznam dopravců. Chyba sítě.';
 $_MODULE['<{packetery}prestashop>packetery.api_88dca3cc785d5f8f4569e346a842c029'] = 'Nesprávný klíč API';
 $_MODULE['<{packetery}prestashop>packetery_7e436ecba5095ef42cfeb5b696fbbdfd'] = 'Získejte zákazníkům přístup k vyzvedávacím bodům v síti Zásilkovny.';
 $_MODULE['<{packetery}prestashop>packetery_e35932e04a726a6aeaf748a6bb5d4267'] = 'Export objednávek do systému Zásilkovny.';
 $_MODULE['<{packetery}prestashop>packetery_4a93d9164aad959a6abc2de389170ac9'] = 'Zásilkovna';
 $_MODULE['<{packetery}prestashop>packetery_34d961ea46be6bd89ea050f383853695'] = 'Vyzvedávací body Zásilkovny, export objednávek a tisk štítků pro přepravu';
 $_MODULE['<{packetery}prestashop>packetery_92d4773a9f32fc3333cb8238471cf763'] = 'Pro instalaci tohoto modulu je třeba povolit cURL rozšíření na Vašem serveru.';
-$_MODULE['<{packetery}prestashop>packetery_c721b4e2739ac6e4dd5b507696c0a24d'] = 'Aby správně fungoval výběr výdejního místa, musí být složka s modulem Zásilkovna zapisovatelná.';
-$_MODULE['<{packetery}prestashop>packetery_b1d2b2b5b4d88a9fdc0619ab919713c9'] = 'Na serveru není dostupný žádný způsob, jak se připojit k API Zásilkovny. Povolte prosím CURL modul nebo nastavení allow_url_fopen.';
 $_MODULE['<{packetery}prestashop>packetery_35c4f71040b3390abc9a98803735e993'] = 'API heslo Zásilkovny není nastaveno.';
 $_MODULE['<{packetery}prestashop>packetery_26ff7eaab2ad87962dbd3d7d6dbaf020'] = 'Propojení s API Zásilkovny se nezdařilo, pravděpodobně používáte chybné API heslo.';
 $_MODULE['<{packetery}prestashop>packetery_0b647f6df914903b01f2659f54d90474'] = 'Číslo objednávky';
@@ -47,12 +45,12 @@ $_MODULE['<{packetery}prestashop>packetery_b1c94ca2fbc3e78fc30069c8d0f01680'] = 
 $_MODULE['<{packetery}prestashop>packetery_902b0d55fddef6f8d651fe1035b7d4bd'] = 'Chyba';
 $_MODULE['<{packetery}prestashop>packetery_505a83f220c02df2f85c3810cd9ceb38'] = 'Úspěch';
 $_MODULE['<{packetery}prestashop>packetery_26d7c5732b0f2abb6d1648a6b07de728'] = 'Úspěšně vyexportováno';
-$_MODULE['<{packetery}prestashop>packetery_c6910bbc8b97a1503dbfbbff9551db48'] = 'Výdejní místa úspěšně zaktualizována.';
+$_MODULE['<{packetery}prestashop>packetery_73e4eb1e816846d0e124f39a49dac43b'] = 'Dopravci byli úspěšně aktualizováni.';
 $_MODULE['<{packetery}prestashop>packetery_48c3deed0967159af65b111f2717c561'] = 'Stránka bude obnovena za 5 sekund...';
-$_MODULE['<{packetery}prestashop>packetery_ccd8959a1ae3519aff5c5ea73518c20f'] = 'Pokus o stažení výdejních míst. Prosím vyčkejte, než bude proces dokončen.';
+$_MODULE['<{packetery}prestashop>packetery_383117ef6ec0814880a145eae09fac7f'] = 'Pokus o stažení dopravců. Počkejte prosím na konec procesu stahování...';
 $_MODULE['<{packetery}prestashop>packetery_ee90bdb5836984e4bb59875948544ad1'] = 'Trasovací čísla některých vybraných objednávek již existují a budou přepsána. Chcete přesto pokračovat?';
 $_MODULE['<{packetery}prestashop>packetery_04973e4f636a6a6403c889bdf7e8dd86'] = 'Vyberte prosím cílové výdejní místo jednotlivých objednávek';
-$_MODULE['<{packetery}prestashop>packetery_ade0fd28ba0f51f9d8ac0c0803b020d0'] = 'Nastala chyba při pokusu o aktualizaci výdejních míst, zkontrolujte, zda máte správně zadané heslo API a zkuste spustit aktualizaci znovu.';
+$_MODULE['<{packetery}prestashop>packetery_fd89a76dd57bc66978a87fafd458c7c8'] = 'Při pokusu o aktualizaci seznamu dopravců došlo k chybě, Zkontrolujte, zda je vaše heslo API správné, a zkuste to znovu.';
 $_MODULE['<{packetery}prestashop>packetery_43e4c4c34b72c8ee0421d21983d8d8a7'] = 'Nevyexportováno! Chyba:';
 $_MODULE['<{packetery}prestashop>packetery_584ad3e893aa1c232f67116fc2686325'] = 'Počet nastavených hmotností';
 $_MODULE['<{packetery}prestashop>packetery_047c5943be09f5e6a0711ff242153735'] = 'Počet chyb během nastavování hmotností';
@@ -65,7 +63,7 @@ $_MODULE['<{packetery}prestashop>packetery.class_ddd6dc80580e42e39480b99a2fd30e1
 $_MODULE['<{packetery}prestashop>packetery.class_029fb74a19c890683f2c2d8e33431d42'] = 'Chyba při uložení nastavení.';
 $_MODULE['<{packetery}prestashop>packetery.class_8d826acd449cf54a4ddfd37819e728eb'] = 'Nejdříve prosím nastavte vazbu na dopravce';
 $_MODULE['<{packetery}prestashop>packetery.class_1097d15ac9e833bc9ee47161243ebc93'] = 'Nepodařilo se zaktualizovat nastavení';
-$_MODULE['<{packetery}prestashop>packetery.class_8ea5600de48afe182f5edb18804e4afc'] = 'Nesprávné heslo API. Výdejní místa není možné zaktualizovat.';
+$_MODULE['<{packetery}prestashop>packetery.class_c417517a9fbdc3a9fb96c306fc27ab81'] = 'Heslo k rozhraní API je špatné. Dopravci nebudou aktualizováni.';
 $_MODULE['<{packetery}prestashop>packetery.class_3a2f7eb090541a1fffae68f276e8d62e'] = 'Heslo API musí být řetězec';
 $_MODULE['<{packetery}prestashop>packetery.class_d2cfd13754957b947b1fb129f7f00c4b'] = 'Zadané označení odesílatele neexistuje.';
 $_MODULE['<{packetery}prestashop>packetery.class_1e55c11920d6ebc07255263ae03d4974'] = 'Ověření označení odesílatele selhalo';
@@ -84,15 +82,15 @@ $_MODULE['<{packetery}prestashop>tab_orders_44940301ddbd65606983e583e0a5760e'] =
 $_MODULE['<{packetery}prestashop>tab_orders_346bb64d32d0b3222ff3ba91f140ec76'] = 'Stažení štítků ve formátu .PDF';
 $_MODULE['<{packetery}prestashop>tab_orders_91dbbc2a3ac9204db85a4b7112661f4f'] = 'Je možné stáhnout pouze štítky k zásilkám, u kterých existuje číslo zásilky (podány přes tlačítko \"Podat vybrané zásilky\")';
 $_MODULE['<{packetery}prestashop>tab_orders_998e4c5c80f27dec552e99dfed34889a'] = 'CSV Export';
-$_MODULE['<{packetery}prestashop>tab_branch_20c0309260293a8a0531ea1128fff732'] = 'Celkem výdejních míst';
-$_MODULE['<{packetery}prestashop>tab_branch_6066c98c6cba3a93df6bc7a1589e69e0'] = 'Poslední aktualizace výdejních míst';
-$_MODULE['<{packetery}prestashop>tab_branch_9743daa059d351726479e426e57f48d2'] = 'Manuální aktualizace seznamu výdejních míst';
-$_MODULE['<{packetery}prestashop>tab_branch_63b5f395371526b212813cc8a397b8df'] = 'Aktualizace výdejních míst';
+$_MODULE['<{packetery}prestashop>tab_branch_57d41df11d9a0c7512e13b58daea48f7'] = 'Celkem dopravců';
+$_MODULE['<{packetery}prestashop>tab_branch_ad26b2c4320499b7daf5b347dec3ef27'] = 'Poslední aktualizace dopravců';
+$_MODULE['<{packetery}prestashop>tab_branch_8e3d020b07f69c7a130016693ea5e4b8'] = 'Manuální aktualizace seznamu dopravců';
+$_MODULE['<{packetery}prestashop>tab_branch_eb1221cacbe894eedcca83061958ac07'] = 'Aktualizace dopravců';
 $_MODULE['<{packetery}prestashop>configure_27b79406ca95fbf0b6cc567f543a92af'] = 'Soap je zakázán. Musíte povolit Soap na svém serveru';
 $_MODULE['<{packetery}prestashop>configure_fba1e1234e0abcc2a410da5ecfeee5f1'] = 'Nástěnka Zásilkovna';
 $_MODULE['<{packetery}prestashop>configure_7442e29d7d53e549b78d93c46b8cdcfc'] = 'Objednávky';
 $_MODULE['<{packetery}prestashop>configure_f4f70727dc34561dfde1a3c529b6205c'] = 'Nastavení';
-$_MODULE['<{packetery}prestashop>configure_485115c849e2941a8608587cab909927'] = 'Výdejní místa';
+$_MODULE['<{packetery}prestashop>configure_1d6af794b2599c1407a83029a09d1ecf'] = 'Dopravci';
 $_MODULE['<{packetery}prestashop>tab_settings_37e31370e4ab230ff6fba12cc6390aff'] = 'Heslo API';
 $_MODULE['<{packetery}prestashop>tab_settings_a4f70091d9d7af3201e79bce9c5f6543'] = 'Označení odesílatele';
 $_MODULE['<{packetery}prestashop>tab_settings_4afd3c4d1ab2de56a330ab46857d3976'] = 'Označení odesílatele najdete najdete v klientské sekci: [1]%s[/1] v poli \"označení\".';
